# quiet_panics

./: Cargo.toml  README.md
cli-panics/: Cargo.toml
cli-panics/src/: lib.rs
quiet_panics/: Cargo.toml
src/: lib.rs
